--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -93,8 +93,10 @@
       </li>
       <li class="chat-incoming chat" id="opt">
         <p>
-          <button id="opt_yes">Yes</button>
-          <button id="opt_no">No</button>
+          <button id="opt_yes" style="background-color: green;">
+            Yes</button>
+          <button id="opt_no" style="background-color: red;">
+            No</button>
         </p>
       </li>
     </ul>
