--- a/web/static/style.css
+++ b/web/static/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-#opt {
+#opt, .end {
     display: none;
 }
 
@@ -150,10 +150,34 @@ header h2 {
 }
 
 .lastMessage {
-    margin-top: 50px;
     font-size: 35px;
     font-weight: 600;
     color: darkgreen;
-    margin-left: 550px;
+    text-align: center;
+    /* margin-left: 550px; */
 }
 
+#endBTN {
+    padding: 8px;
+    border: 0;
+    outline: none;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 7px;
+    background-color: #2F8D46;
+    cursor: pointer;
+    color: white;
+
+    margin-top: 20px;
+    position: absolute;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.footer { 
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    z-index: 10;
+}
