feat: beautify drug recommendations (still Chinese)

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-#opt, .end {
+#opt, .end, #drugs {
     display: none;
 }
 
@@ -70,6 +70,26 @@ header h2 {
 
 .chat-incoming p {
     background-color: #eaeaea;
+}
+
+.chat-incoming table {
+    background-color: #eaeaea;
+    border-collapse: separate;
+    width: 100%;
+    border-spacing: 0;
+    border: 1px solid #6b675d;
+}
+
+th {
+    border: 0.75px solid black;
+    text-align: center;
+}
+td {
+    background-color:#f3f3f3;
+    width:25vw;
+    height:50px;
+    text-align:center;
+    border: 0.75px solid black;
 }
 
 .chat-incoming button {
