feat: template in chat for user to follow

--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -26,7 +26,8 @@
     <ul class="chatbox-en">
       <!--選擇UI及成藥推薦的語言，output語言是根據input有沒有中文決定-->
       <li class="chat-incoming chat">
-        <p>Hi! Please type your situation here in English</p>
+        <p>Hi! Please type your situation here in English.</p>
+        <p>For example, "I've been coughing a lot and feeling chilly and shivery. My nose has been quite clogged, making me have difficulty breathing. I also have a lot of phlegm."</p>
       </li>
       <li class="chat-incoming chat" id="opt-en">
         <p>
@@ -77,6 +78,7 @@
       <!--選擇UI及成藥推薦的語言，output語言是根據input有沒有中文決定-->
       <li class="chat-incoming chat">
         <p>您好! 請闡述您遇到的疾病、症狀情形，像是持續多久、嚴重程度 </p>
+        <p>例如，"我經常打噴嚏並且喉嚨痛。我的嘴唇和眼睛周圍偶爾會腫脹。一旦我開始打噴嚏，我就停不下來。"</p>
       </li>
       <li class="chat-incoming chat" id="opt-zh">
         <p>
