--- a/web/static/style.css
+++ b/web/static/style.css
@@ -23,9 +23,9 @@ body {
     border-radius: 10px;
     margin: 50px auto;
     overflow: hidden;
-    width: 500px;
+    width: 600px;
     overflow-y: clip;
-    height: 600px;
+    height: 700px;
     background: rgb(255, 255, 255);
     background-size: contain;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -49,7 +49,7 @@ header h2 {
     padding: 15px;
     list-style: none;
     overflow-y: auto;
-    height: 400px;
+    height: 450px;
 }
 
 .chatbox-en li, .chatbox-zh li {
@@ -59,7 +59,7 @@ header h2 {
 .chat p {
     padding: 10px;
     border-radius: 10px;
-    max-width: 70%;
+    max-width: 75%;
     word-wrap: break-word;
 }
 
@@ -119,8 +119,9 @@ td {
 }
 
 .chat-input textarea {
-    width: 522px;
+    width: 622px;
     padding: 10px;
+    padding-right: 20px;
     border: 1px solid #ccc;
     border-radius: 7px;
     resize: none;
@@ -132,7 +133,7 @@ td {
     font-weight: 600;
     margin-top: -10px;
     margin-left: -15px;
-    height: 71px;
+    height: 121px;
 }
 
 #cross {
@@ -192,7 +193,7 @@ td {
     background-color: #2F8D46;
     cursor: pointer;
     color: white;
-    margin-top: 12px;
+    margin-top: 8px;
 }
 
 .lastMessage {
