--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -6,7 +6,6 @@
   <title>Project Demo / 專題展示</title>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="{{ url_for('static', filename='app.js') }}"></script>
 </head>
 <body>
@@ -21,6 +20,8 @@
       <h2>Project Demo</h2>
       <span alt="Close" onclick="closeChat()"
         id="cross">X</span>
+      <!-- <span class="robot"></span>
+      <span class="user"></span> -->
     </header>
   
     <ul class="chatbox-en">
@@ -79,6 +80,8 @@
       <h2>專題展示</h2>
       <span alt="Close" onclick="closeChat()"
         id="cross">X</span>
+      <!-- <span class="robot"></span>
+      <span class="user"></span> -->
     </header>
   
     <ul class="chatbox-zh">
